# tau

./: .gitignore  .taplo.toml  .treefmt.toml  AGENTS.md  Cargo.toml  FEATURES.md  README.md  TODO-items-rework.md  TODO-prompt-refactor.md  TODO-shell-tool-fixes.md  TODO.delegate-refactor.md  TODO.txt  flake.nix
.agents/skills/tau-cargo-crap/: SKILL.md
.agents/skills/tau-debugging/: SKILL.md
.agents/skills/tau-tool-verification/: SKILL.md
.agents/tau-rust-coding-style/: SKILL.md
.config/selfci/: ci.sh
config/: cli.json5  cli.yaml  harness.json5  harness.ncl  harness.yaml  models.json5
crates/tau/: Cargo.toml
crates/tau-actions/: Cargo.toml
crates/tau-actions/src/: lib.rs
crates/tau-agent/: Cargo.toml
crates/tau-agent/src/: common.rs  lib.rs  openai.rs  responses.rs  tests.rs
crates/tau-agent/src/common/: tests.rs
crates/tau-agent/src/openai/: tests.rs
crates/tau-agent/src/responses/: pool.rs  tests.rs  ws.rs
crates/tau-cli/: Cargo.toml
crates/tau-cli-picker/src/: lib.rs
crates/tau-cli-term-raw/: Cargo.toml  README.md
crates/tau-cli-term-raw/src/: lib.rs  main.rs  tests.rs
crates/tau-cli-term-raw/src/screen/: tests.rs
crates/tau-cli-term/src/: completion.rs  lib.rs  resolve.rs  tests.rs
crates/tau-cli-term/src/tests/: prompt_action_parse.rs
crates/tau-cli/src/: action_commands.rs  chat.rs  cli.rs  daemon.rs  event_renderer.rs  lib.rs  print_prompt.rs  print_tools.rs  prompt_stdin.rs  send.rs  settings_registry.rs  tests.rs  theme.rs  tool_render.rs  ui_logging.rs
crates/tau-cli/src/event_renderer/: tests.rs
crates/tau-config/: Cargo.toml
crates/tau-config/config/: built-in.cli-bindings.json5  built-in.cli-bindings.yaml  built-in.cli.json5  built-in.cli.yaml  built-in.harness.contracts.ncl  built-in.harness.json5  built-in.harness.ncl  built-in.harness.yaml
crates/tau-config/src/: atomic.rs  lib.rs  settings.rs
crates/tau-config/src/settings/: tests.rs
crates/tau-core/: Cargo.toml
crates/tau-core/src/: action_registry.rs  bus.rs  connection.rs  lib.rs  memory.rs  policy.rs  session.rs  session_store.rs  tests.rs  tool_registry.rs
crates/tau-core/src/session_store/: tests.rs
crates/tau-ext-core-delegate/: Cargo.toml  README.md
crates/tau-ext-core-delegate/prompts/: delegate_prefix.md
crates/tau-ext-core-delegate/src/: lib.rs  main.rs
crates/tau-ext-core-notifications/: Cargo.toml  README.md
crates/tau-ext-core-notifications/src/: lib.rs  main.rs  tests.rs
crates/tau-ext-core-subagents/: Cargo.toml  README.md
crates/tau-ext-core-subagents/src/: lib.rs  main.rs
crates/tau-ext-dpc-notifications/src/: lib.rs
crates/tau-ext-email/: README.md
crates/tau-ext-email/src/: lib.rs  real_backend.rs  tests.rs
crates/tau-ext-provider-chat-completions/src/: lib.rs
crates/tau-ext-provider-openai/: Cargo.toml
crates/tau-ext-provider-openai/src/: common.rs  lib.rs  main.rs  responses.rs
crates/tau-ext-provider-openai/src/common/: tests.rs
crates/tau-ext-provider-openai/src/responses/: pool.rs  tests.rs  ws.rs  ws_runtime.rs
crates/tau-ext-shell/: Cargo.toml
crates/tau-ext-shell/src/: argument.rs  diff.rs  display.rs  isolation.rs  lib.rs  main.rs  tests.rs  tools.rs  truncate.rs
crates/tau-ext-shell/src/tools/: edit.rs  find.rs  grep.rs  ls.rs  read.rs  shell.rs  write.rs
crates/tau-ext-std-notifications/: README.md
crates/tau-ext-std-notifications/src/: lib.rs  tests.rs
crates/tau-ext-test-dummy/: Cargo.toml
crates/tau-ext-test-dummy/src/: lib.rs  tests.rs
crates/tau-ext-websearch/: Cargo.toml  README.md
crates/tau-ext-websearch-exa/: README.md
crates/tau-ext-websearch-exa/src/: lib.rs  tests.rs
crates/tau-ext-websearch/src/: lib.rs  main.rs  tests.rs
crates/tau-extension/src/: handshake.rs  lib.rs
crates/tau-harness/: Cargo.toml
crates/tau-harness-tools/src/: lib.rs
crates/tau-harness/config/: built-in.extensions.json5
crates/tau-harness/prompts/: big.hbs  system.hbs
crates/tau-harness/src/: conversation.rs  daemon.rs  debug_log.rs  dedup.rs  dirs.rs  discovery.rs  error.rs  event.rs  event_log.rs  extension.rs  format.rs  harness.rs  internal_tools.rs  lib.rs  model.rs  prompt.rs  settings.rs  tool_turn.rs  turn.rs  version.rs
crates/tau-harness/src/harness/: dispatch.rs  interception.rs  replay.rs  skill_tool.rs  subagents_tool.rs  tests.rs
crates/tau-harness/src/harness/subagents_tool/: tests.rs
crates/tau-harness/src/harness/tests/: action.rs  dedup.rs  dispatch.rs  format.rs  interception.rs  lifecycle.rs  mod.rs  mode.rs  model.rs  replay.rs  skill_tool.rs
crates/tau-harness/src/prompt/: tests.rs
crates/tau-harness/src/settings/: tests.rs
crates/tau-proto/src/: event_name.rs  events.rs  frame.rs  lib.rs  messages.rs  tests.rs
crates/tau-provider/: Cargo.toml
crates/tau-provider-cli/src/: lib.rs  tests.rs
crates/tau-provider/src/: lib.rs  oauth.rs  resolver.rs
crates/tau-provider/src/resolver/: tests.rs
crates/tau-session-inspect/src/: lib.rs
crates/tau-skills/self-knowledge/: tau-self-knowledge-config.md  tau-self-knowledge-debugging.md  tau-self-knowledge-email.md  tau-self-knowledge.md
crates/tau-skills/src/: lib.rs  tests.rs
crates/tau-socket/src/: lib.rs  tests.rs
crates/tau-socket/tests/: daemon_attach.rs
crates/tau-supervisor/src/: lib.rs
crates/tau-supervisor/tests/: supervisor.rs
crates/tau-term-screen/src/: screen.rs
crates/tau-term-screen/src/screen/: tests.rs
crates/tau-test-support/: Cargo.toml
crates/tau-test-support/src/: lib.rs  tests.rs
crates/tau-themes/: Cargo.toml
crates/tau-themes/src/: lib.rs  names.rs  text.rs  theme.rs
crates/tau-themes/src/theme/: tests.rs
crates/tau-themes/themes/: tau-light.json5  tau.json5
crates/tau/src/: main.rs
docs/: agent-messaging.md  agent-roles.md  cli-keybindings.md  events.md  harness-agent-item-architecture.md  harness-agent-item-types.md  interceptors.md  messages.md  providers.md  skills.md
nix/: cargo-crap-baseline.json
nix/pkgs/: cargo-crap.nix
site/: index.html
tmp/email-ext/: 19-phase-c-implementation.md  23-phase-d-implementation.md
