[workspace]
default-members = ["crates/tau"]
members = [
  "crates/tau-agent",
  "crates/tau-cli",
  "crates/tau-config",
  "crates/tau-core",
  "crates/tau-ext-core-delegate",
  "crates/tau-ext-std-notifications",
  "crates/tau-ext-shell",
  "crates/tau-ext-websearch-exa",
  "crates/tau-ext-test-dummy",
  "crates/tau-extension",
  "crates/tau-harness",
  "crates/tau-skills",
  "crates/tau-proto",
  "crates/tau-provider",
  "crates/tau-socket",
  "crates/tau-supervisor",
  "crates/tau-blocking-notify-channel",
  "crates/tau-test-support",
  "crates/tau-cli-term-raw",
  "crates/tau-cli-term",
  "crates/tau-themes",
  "crates/tau",
]
resolver = "2"

[workspace.package]
edition = "2024"
license = "MPL-2.0"
rust-version = "1.86"
version = "0.1.0"

[workspace.lints.rust]
unsafe_code = "deny"
unused = { level = "deny", priority = -1 }

[workspace.lints.clippy]
dbg_macro = "deny"
todo = "deny"
unwrap_used = "deny"

[workspace.dependencies]
# Internal crates
tau-agent = { path = "crates/tau-agent" }
tau-blocking-notify-channel = { path = "crates/tau-blocking-notify-channel" }
tau-cli = { path = "crates/tau-cli" }
tau-cli-term = { path = "crates/tau-cli-term" }
tau-cli-term-raw = { path = "crates/tau-cli-term-raw" }
tau-config = { path = "crates/tau-config" }
tau-core = { path = "crates/tau-core" }
tau-ext-core-delegate = { path = "crates/tau-ext-core-delegate" }
tau-ext-std-notifications = { path = "crates/tau-ext-std-notifications" }
tau-ext-shell = { path = "crates/tau-ext-shell" }
tau-ext-websearch-exa = { path = "crates/tau-ext-websearch-exa" }
tau-ext-test-dummy = { path = "crates/tau-ext-test-dummy" }
tau-extension = { path = "crates/tau-extension" }
tau-harness = { path = "crates/tau-harness" }
tau-proto = { path = "crates/tau-proto" }
tau-skills = { path = "crates/tau-skills" }
tau-provider = { path = "crates/tau-provider" }
tau-socket = { path = "crates/tau-socket" }
tau-supervisor = { path = "crates/tau-supervisor" }
tau-test-support = { path = "crates/tau-test-support" }
tau-themes = { path = "crates/tau-themes" }

# External crates
backon = "1"
base64 = "0.22"
bon = "3"
built = { version = "0.8", features = ["chrono", "git2"] }
time = { version = "0.3", features = ["formatting", "macros", "parsing"] }
comfy-table = "7"
ciborium = "0.2.2"
config = { version = "0.15", default-features = false, features = ["json5"] }
dialoguer = "0.11"
json5 = "0.4"
rand = "0.8"
serde_json = "1"
sha2 = "0.10"
ureq = { version = "2", default-features = false, features = ["tls"] }
url = "2"
clap = { version = "4", features = ["derive"] }
crossterm = { version = "0.28", features = ["bracketed-paste"] }
unicode-width = "0.2"
dirs = "6"
fs2 = "0.4"
globset = "0.4"
ignore = "0.4"
libc = "0.2"
serde = { version = "1", features = ["derive"] }
similar = "2"
tempfile = "3"
toml = "0.9"
tracing = { version = "0.1", default-features = false, features = [
  "std",
  "attributes",
] }
tracing-subscriber = { version = "0.3", default-features = false, features = [
  "env-filter",
  "fmt",
  "std",
] }
vt100 = "0.16"

[profile.ci]
debug = "line-tables-only"
incremental = false
inherits = "dev"
lto = "off"

[profile.release]
debug = "line-tables-only"
lto = "fat"
