[package]
name = "tau-cli-term-raw"
version.workspace = true
edition.workspace = true
description.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
bon.workspace = true
crossterm.workspace = true
tau-blocking-notify-channel.workspace = true
tau-term-screen.workspace = true
tracing.workspace = true
unicode-width.workspace = true

[[bin]]
name = "tau-cli-term-raw-demo"
path = "src/main.rs"

[dev-dependencies]
vt100.workspace = true
