[package]
name = "tau-cli"
version.workspace = true
edition.workspace = true
description.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
base64.workspace = true
ciborium.workspace = true
clap.workspace = true
dirs.workspace = true
fs2.workspace = true
libc.workspace = true
rand.workspace = true
serde.workspace = true
serde_json.workspace = true
tau-actions.workspace = true
tau-cli-picker.workspace = true
tau-cli-term.workspace = true
tau-config.workspace = true
tau-ext-provider-builtin.workspace = true
tau-harness.workspace = true
tau-harness-tools.workspace = true
tau-proto.workspace = true
tau-session-inspect.workspace = true
tau-themes.workspace = true
time.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[build-dependencies]
built.workspace = true

[dev-dependencies]
tau-cli-term-raw = { workspace = true }
tempfile.workspace = true
vt100.workspace = true
