[package]
name = "tau-ext-core-delegate"
version.workspace = true
edition.workspace = true
description.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
serde_json.workspace = true
tau-extension.workspace = true
tau-proto.workspace = true
tracing.workspace = true
