[package]
name = "tau-ext-core-notifications"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
libc.workspace = true
serde.workspace = true
serde_json.workspace = true
tau-extension.workspace = true
tau-proto.workspace = true
tracing.workspace = true

[dev-dependencies]
tempfile.workspace = true
