[package]
name = "tau-ext-shell"
version.workspace = true
edition.workspace = true
description.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true
license.workspace = true

[lints]
workspace = true

[features]
# Registers the test-only `echo` tool. Enabled automatically under
# `cfg(test)`; the `tau-harness` `echo-agent` feature forwards to this
# so echo-agent harness tests can exercise the tool dispatcher
# without a real model.
echo-agent = []

[dependencies]
ciborium.workspace = true
dirs.workspace = true
globset.workspace = true
ignore.workspace = true
libc.workspace = true
serde.workspace = true
serde_json.workspace = true
similar.workspace = true
tau-extension.workspace = true
tau-proto.workspace = true
tau-skills.workspace = true

[dev-dependencies]
tempfile.workspace = true
