[package]
name = "tau-harness"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
bon.workspace = true
dirs.workspace = true
serde_json.workspace = true
tempfile.workspace = true
tau-agent.workspace = true
tau-config.workspace = true
tau-core.workspace = true
tau-ext-shell.workspace = true
tau-proto.workspace = true
tau-skills.workspace = true
tau-socket.workspace = true
tau-supervisor.workspace = true
tracing.workspace = true

[dev-dependencies]
