[package]
name = "tau-harness"
version.workspace = true
edition.workspace = true
description.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true
license.workspace = true

[lints]
workspace = true

[features]
# Exposes echo-provider test harness helpers (`run_daemon_with_echo`,
# `run_embedded_message_with_echo`). Enabled by tau-test-support and
# by this crate's own dev-dependencies for the internal test suite.
# Pulls in tau-ext-shell so the `echo` tool is in-process for
# echo-provider-driven tool calls; without this feature, tau-harness has
# no dependency on tau-ext-shell at all.
echo-agent = ["dep:tau-ext-shell"]

[dependencies]
blake3.workspace = true
bon.workspace = true
ciborium.workspace = true
dirs.workspace = true
handlebars.workspace = true
json5.workspace = true
libc.workspace = true
rand.workspace = true
serde.workspace = true
serde_json.workspace = true
tau-actions.workspace = true
tau-config.workspace = true
tau-core.workspace = true
tau-ext-shell = { workspace = true, optional = true, features = ["echo-agent"] }
tau-proto.workspace = true
tau-session-inspect.workspace = true
tau-skills.workspace = true
tau-socket.workspace = true
tau-supervisor.workspace = true
tempfile.workspace = true
tracing.workspace = true

[build-dependencies]
built.workspace = true

[dev-dependencies]
tau-ext-shell = { workspace = true, features = ["echo-agent"] }
