[package]
name = "tau-provider"
version.workspace = true
edition.workspace = true
description.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
base64.workspace = true
blake3.workspace = true
dirs.workspace = true
rand.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
tau-config.workspace = true
tau-proto.workspace = true
tracing.workspace = true
url.workspace = true
ureq = { workspace = true }
