[package]
name = "tau-test-support"
version.workspace = true
edition.workspace = true
description.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
tau-config.workspace = true
tau-core.workspace = true
tau-harness = { workspace = true, features = ["echo-agent"] }
tau-session-inspect.workspace = true
tempfile.workspace = true

[dev-dependencies]
tau-ext-provider-openai.workspace = true
tau-ext-shell = { workspace = true, features = ["echo-agent"] }
tau-proto.workspace = true
